# PyAltium

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Data  LICENSE  Pipfile  README.md  _setup.cfg  build_inst.sh  format.md  package.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
docs/: api.rst  conf.py  index.rst  installation.rst  links.html  requirements.txt
docs/usage/: index.rst  matlib.rst
scratch/: local_test.py
src/pyaltium/: __init__.py  base.py  exceptions.py  helpers.py  magic.py  magicstrings.py  pcblib.py  schematichelpers.py  schlib.py  types.py
src/pyaltium/matlib/: __init__.py  _helpers.py  _lib.py  base.py  helpers.py  lib.py  libitem.py  libproprety.py  types.py
src/pyaltium/pcb/: __init__.py  _lib.py  lib.py  libitem.py  pcblib.py
src/pyaltium/project/: _prj.py  components.py
src/pyaltium/sch/: __init__.py  _helpers.py  _item.py  _lib.py  _record.py  helpers.py  lib.py  libitem.py  libitemrecord.py
test/: local_test.py  test_opening.py
test/files/: Empty.SchLib  PcbLib1.PcbLib  SchGraphicSimple.SchLib  SchLib1.SchLib  graphic  notes.txt  pads.txt  pins.txt
test/files/SchLib1_Extracted/: FileHeader  Storage
test/scratch/: local_test.py
tests/: local_test.py  test_opening.py
tests/files/: PcbEmpty.PcbLib  PcbLib1.PcbLib  SchLib1.SchLib  Schlib1.SchLib  matlib.xml  pin_position.txt  pins.txt  pintextdata.txt
tests/test_general/: test_helpers.py
tests/test_matlib/: test_matlib.py  test_types_unit.py  types_xml.py
tests/test_sch/: test_sch_unit.py
(+96 files in other folders)
