[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"


[tool.mypy]
# check_untyped_defs = true
# ignore_missing_imports = true
# warn_redundant_casts = true
# warn_unused_configs = true
# warn_unused_ignores = true
files = "src"
ignore_missing_imports = true

# [mypy-olefile]

# [mypy-matplotlib]
# ignore_missing_imports = true
